unidad07/nm_pda_dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pda-dev
  labels:
    module: pda
