unidad07/6-hoteles-frontend.parte1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoteles-frontend
  namespace: nmspc-hoteles
  labels:
    app: hoteles-frontend
    module: hoteles
    type: web
    release: stable
    tier: frontend
spec:
  replicas: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: hoteles-frontend
      module: hoteles
      release: stable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: hoteles-frontend
        module: hoteles
        type: web
        release: stable
        tier: frontend
    spec:
      containers:
      - name: hoteles-frontend
        image: ghcr.io/go-elevate/k8s4arch-hotels-frontend:stable
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 10
          failureThreshold: 1
          successThreshold: 1
        readinessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 2
          successThreshold: 1
        resources:
          requests:
            cpu: "0.2"
            memory: "100Mi"
          limits:
            cpu: "1"
            memory: "200Mi"
