unidad07/4-hoteles-backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hoteles-backend-svc
  namespace: nmspc-hoteles
spec:
  type: ClusterIP
  selector:
    app: hoteles-backend
    module: hoteles
    release: stable
  ports:
    - protocol: TCP
      name: http
      port: 5000
      targetPort: 5000
