unidad07/parte_1_2_deploymentHotelesFront.yaml
apiVersion: v1
kind: Service
metadata:
    name: pda-hotel-front-stablev1-srv
    namespace: pda-dev
    labels:
        app: pda-dep-front-stablev1
        owner: aws-pda
        type: rest-services
        ejercicio: unidad7
        tier: frontend
spec:
    type: ClusterIP
    selector:
        app: pda-dep-front-stablev1
        owner: aws-pda
        type: web
        ejercicio: unidad7
        tier: frontend
    ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pda-hotel-front-stablev1
    namespace: pda-dev
    labels:
        app: pda-dep-front-stablev1
        owner: aws-pda
        type: web
        ejercicio: unidad7
        tier: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: pda-dep-front-stablev1
            owner: aws-pda
            type: web
            ejercicio: unidad7
            tier: frontend
    strategy:
            type: RollingUpdate
            rollingUpdate:
                    maxUnavailable: 25%
                    maxSurge: 2
    template:
        metadata:
            name: pda-dep-front-stablev1-pod
            labels:
                app: pda-dep-front-stablev1
                owner: aws-pda
                type: web
                ejercicio: unidad7
                tier: frontend
                module: pda-hotels
        spec:
            containers:
            - name: pda-dep-front-stablev1-cont
              image: 'ghcr.io/go-elevate/k8s4arch-hotels-frontend:stable'
              resources:
                  requests:
                    cpu: "0.2"
                    memory: "100Mi"
                  limits:
                    cpu: "0.5"
                    memory: "150Mi"
              ports:
              - containerPort: 80
              livenessProbe:
                  tcpSocket:
                    port: 80
                  initialDelaySeconds: 2
                  periodSeconds: 2
                  failureThreshold: 1
                  successThreshold: 1
              readinessProbe:
                  httpGet:
                    port: 80
                    path: /
                  initialDelaySeconds: 5
                  periodSeconds: 5
                  failureThreshold: 5
                  successThreshold: 2
