unidad07/7-ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoteles-frontend
  namespace: practica7
  labels:
    app:  hoteles-frontend
    modulo: reservas
    capa: frontend
    version: stable
    tecnologia: react
    ambiente: prod
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: awesome-hotels.internal.itrip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hoteles-frontend
            port:
              number: 80
