unidad07/8-hoteles-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hoteles-ingress
  namespace: nmspc-hoteles
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: api-hotels.internal.itrip.io
    http:
      paths:
      - path: /hotels
        pathType: Prefix
        backend:
          serviceName: hoteles-backend-svc
          servicePort: 5000
  - host: awesome-hotels.internal.itrip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: hoteles-frontend-svc
          servicePort: 80
