unidad07/parte_2_ingressHoteles.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pda-hotel-ingress
  namespace: pda-dev
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api-hotels.internal.itrip.io
    http:
      paths:
      - path: /hotels
        pathType: Prefix
        backend:
          serviceName: pda-hotel-back-stablev1-srv
          servicePort: 5000
  - host: awesome-hotels.internal.itrip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: pda-hotel-front-stablev1-srv
          servicePort: 80
